trying to solve problem with aligning

--- a/index.css
+++ b/index.css
@@ -5,11 +5,10 @@ body {
   }
 
 img.headerbild {
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 5%;
+	margin-right: 5%;
 	width: 80%;
 	height: auto;
-	;
 }
 
 footer {
@@ -44,7 +43,7 @@ width:80%;
 	margin-bottom: 3px;
 	margin-left: 10%;
  	margin-right: 10%;
-	
+
 }
 
 img.logos {
